syntax = "proto3";

package pb;

option go_package = "./pb";

message Proto {
  int32 ver  = 1;
  int32 op   = 2;
  int32 seq  = 3;
  bytes body = 4;
}

message PushOneReq {
  string rid = 1;
  string cid = 2;
  Proto data = 3;
}

message PushOneReply {}

message PushBatchReq {
  message Dest {
    string rid = 1;
    string cid = 2;
    Proto data = 3;
  }
  repeated Dest list = 1;
}

message PushBatchReply {}

message BroadcastReq {
  string rid = 1;
  Proto data = 2;
}

message BroadcastReply {}

message AuthReq {
  string rid   = 1;
  string token = 2;
}